# task-scheduler

./: .coverage  .gitignore  .travis.yml  README.md  project-ideas.md  pyproject.toml  reminders.csv  requirements.md  software-requirements.md  task_scheduler.rar  team-agreement.md
.github/workflows/: python-tests.yml
task_scheduler/: base.py  notes.py  threads.py
task_scheduler/entertainment/: game.py  idle_tracker.py
task_scheduler/feat_test/: feat_test.py
task_scheduler/group/: README.md  group_app.py
task_scheduler/main/: main.py  notes.csv  reminders.csv
task_scheduler/notes/: notes.csv  notes.py
task_scheduler/reminder/: reminder_handler.py
task_scheduler/reminders/: reminder_handler.py  reminders.csv
task_scheduler/search_topic/: search_topic.py
task_scheduler/topic_search/: main_search_of_topics.py  websites_to_search.py
tests/search_test/: .coverage  citi_joker.txt  flo.py  pick.txt  test_britannica_search.txt  test_citizendium_search.txt  test_list_of_websites.txt  test_search_topic.py  test_wikipedia_search.txt  test_wikipedia_search2.txt  wiki_joker.txt
tests/test1/: test_feat.py
tests/test_group_app/: .coverage  mocker_group_app_feature.py  senario.txt  senario2.txt  senario3.txt  senario4.txt  senario5.txt  senario6.txt  test_file.py
tests/test_notes/: .coverage  scenario_1.txt  scenario_delete_1.txt  scenario_quit.txt  scenario_update_1.txt  test_notes.py  test_scnario_invalid_entry_1.txt
tests/test_reminders/: .coverage  reminder.csv  reminder_mocker.py  reminders.csv  reminders_mocker.py
(+17 files in other folders)
