[tool.poetry]
name = "task-scheduler"
version = "0.1.0"
description = ""
authors = ["HamzaAhmad97 <h.radiahmad@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.9,<3.11"
pytest = "^6.2.5"

numpy = "^1.21.4"
pandas = "^1.3.4"
pynput = "^1.7.4"
terminaltables = "^3.1.0"
termcolor = "^1.1.0"
art = "^5.3"
coverage = "^6.1.1"
requests = "^2.26.0"
bs4 = "^0.0.1"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
